# MMG

./: .gitignore  Cargo.toml  README.md
assets/gameplay/: README.md
initial_text/: CoMyth-Fact_corpus.credit  CoMyth-Fact_corpus.txt
migrations/2022-11-29-023644_create_video_entry/: up.sql
scripts/: festival.sh  flite.sh  generate_video.sh
src/: audio.rs  db.rs  generate.rs  hand_off.rs  main.rs  models.rs  schema.rs
