[package]
name = "mmg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = [ "postgres" ] }
dotenvy = "0.15.6"
clap = "4.0.27"
log = "0.4.17"
env_logger = "0.10.0"
reqwest = { version = "0.11.13", features = [ "json" ] }
tokio = { version = "1.22.0", features = [ "full" ] }
json = "0.12.4"
serde_json = "1.0.89"
